# Tensor

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTION.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: verification-workflow.mdc
docs/: verification.md
examples/python/: package_smoke.py
python/: CMakeLists.txt  bindings.cpp  requirements.txt
python/tensor/: __init__.py
python/tests/: conftest.py  test_benchmark_compare.py  test_compare_numpy_torch.py  test_integration.py
requirements/: cpu-bench-torch.txt  cpu-bench.txt  cpu-dev.txt  shared.txt
src/: main.cpp
src/Tensor/: Tensor.cpp  Tensor.hpp
src/api/: Api.hpp
src/python/: CMakeLists.txt  bindings.cpp
src/tensor/: Linear.cpp  Linear.hpp  Ops.cpp  Ops.hpp  Tensor.cpp  Tensor.hpp
tests/: CMakeLists.txt
tests/bench/: tensor_bench.cpp
tests/unit/: api_factories_test.cpp  autograd_test.cpp  linear_test.cpp  ops_forward_test.cpp  tensor_core_test.cpp  views_test.cpp
